# lpb_sl

./: .config  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  Readme.md  clang-format.txt  cmake_install.cmake  conanfile.txt  gitignore  iox_lpb_backbone.cpp  iox_lpb_cli.cpp  main.c  main.cpp  run.sh  shared_types.hpp
build_armhf/: CMakeCache.txt
datahandling/: datahandling.cpp  datahandling.hpp
lib/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/include/: DataRouter.hpp  bufferedlogger.hpp  cli.hpp  datadelegate.hpp  datahandling.hpp  datarouter.hpp  dual_comms.hpp  forward_kinematics.hpp  inverse_kinematics.hpp  iox_coms.hpp  kalman_filter.hpp  linked_movements.hpp  modes.hpp  serialization.hpp  sysinfo.hpp  tracking.hpp
lib/src/: CMakeLists.txt  Makefile  bufferedlogger.cpp  cli.cpp  cmake_install.cmake  datadelegate.cpp  datahandling.cpp  datarouter.cpp  forward_kinematics.cpp  inverse_kinematics.cpp  iox_coms.cpp  kalman_filter.cpp  linked_movements.cpp  serialization.cpp  sysinfo.cpp  tracking.cpp
modes/: CMakeLists.txt
serialization/: CMakeLists.txt  serialization.hpp
test/: CMakeLists.txt  forward_kinematics_test.cpp  inverse_kinematics_test.cpp  kalman_filter_test.cpp  linked_movement_test.cpp
tracker/: CMakeLists.txt  tracking.hpp
